# resume-copilot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  skills-lock.json
ai/: .dockerignore  Dockerfile  README.md  README.py  app.py  demo.py  evaluation.py  main.py  ner.py  pyproject.toml  resume_dataset.py  resume_ner.py  server.py  test_ner.py
ai/.gradio/flagged/: dataset1.csv
ai/NER/: ner.py  ner2.py
ai/__test__/: ner.test.py
ai/datasets/: datasets.7z  technical_skills.csv
ai/evaluate/: evaluate.py
ai/evaluator/: __init__.py  evaluator.py
ai/extractor/: __init__.py  experience.py  skill.py
ai/llm/: __init__.py  rewriter.py
ai/matcher/: __init__.py  matcher.py
ai/matching/: matcher.py  semantic_matcher.py
ai/model/: __init__.py  model.py
ai/models/: schemas.py
ai/parser/: __init__.py  job.py  utils.py
ai/preprocessing/: jd_processor.py  raw_jd_parser.py  resume_processor.py  utils.py
ai/scorer/: __init__.py  scorer.py
app/: error.tsx  global-error.tsx  globals.css  not-found.tsx  page.tsx
constants/: cookies.ts  index.ts  page.ts
db/: schema.ts
docs/: cicd-complete-guide.md  deployment.md  project-guide.md
drizzle/: 0000_third_mojo.sql  0001_stale_living_tribunal.sql
hooks/: index.ts  use-dialog.ts  use-toggle.ts
lib/: api-response.ts  auth-client.ts  auth.ts  job-parse.ts  linkedin-parser.ts  markdown.ts  python-client.ts  request.ts
services/: ai.ts  resume.ts
stores/: layout-store.ts  resume-store.ts
(+90 files in other folders)
